# Self-Forcing

./: .gitignore  README.md  demo.py  inference.py  pyproject.toml  setup.py  train.py
configs/: b2d_finetune.yaml
demo_utils/: memory.py  taehv.py  utils.py  vae.py  vae_block3.py  vae_torch2trt.py
model/: __init__.py  base.py  causvid.py  diffusion.py  dmd.py  gan.py  inference_model.py  ode_regression.py  sid.py  training_model.py
pipeline/: bidirectional_diffusion_inference.py  bidirectional_inference.py  causal_diffusion_inference.py  causal_inference.py  self_forcing_training.py
scripts/: b2d_encode_latents.py  b2d_eval.py  b2d_infer_valid.py  b2d_split.py  create_lmdb_14b_shards.py  create_lmdb_iterative.py  encode_latents.py  generate_ode_pairs.py  infer_valid.py  prepare_carla_i2v.py  run_train.sh  streaming_predict_kv.py  train.py
trainer/: __init__.py  diffusion.py  distillation.py  gan.py  ode.py
utils/: b2d_dataset.py  dataset.py  distributed.py  loss.py  misc.py  scheduler.py  wan_wrapper.py
wan/: image2video.py  text2video.py
wan/distributed/: xdit_context_parallel.py
wan/modules/: causal_model.py  clip.py  model.py  vae.py
wan/utils/: fm_solvers.py  fm_solvers_unipc.py  prompt_extend.py  qwen_vl_utils.py  utils.py
